# Yun-Ying-Ya

./: .gitattributes  .gitignore  03.md  check.lua
fw/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
fw/main/: CMakeLists.txt  audio.c  encode.c  gauge.c  i2s.c  idf_component.yml  led.c  main.c  main.h  pins.h  request.c  time_sync.c  wifi_conn.c  wifi_cred.example.h
fw/main/ulp/: main.c  sled.S
hw/: Duck.kicad_pcb  Duck.kicad_prl  Duck.kicad_pro  Duck.kicad_sch  fp-lib-table  sym-lib-table
hw/Duck_footprints.pretty/: LED_1x04_D5.0_P1.27.kicad_mod  SMD_1x04_P2.54mm.kicad_mod  TestPoints_1x04_P2.0.kicad_mod  TestPoints_1x06_P2.0.kicad_mod  TestPoints_FFC_1x06_P0.5.kicad_mod  USB_C_Receptacle.kicad_mod
hw/libs/CH343/: CH343.kicad_sym
hw/libs/Espressif/: Espressif.kicad_sym
hw/libs/Espressif/Espressif.pretty/: ESP32-S3-MINI-1.kicad_mod  ESP32-S3-PICO-1-LGA-56.kicad_mod
hw/libs/INMP441/: INMP441.kicad_sym
hw/libs/INMP441/INMP441.pretty/: INMP441.kicad_mod
hw/libs/MAX17048G+T10/: MAX17048G+T10.kicad_sym
hw/libs/PY32F003/: PY32F003.kicad_sym
misc/net/: 1.c  net_tsinghua.c  net_tsinghua.h  testrun.c
misc/opus_decode/: 1.js  README.md  duck_opus_decoder.c  duck_opus_decoder.js  duck_opus_decoder.wasm  opus-1.5.2
misc/opus_encode/: encode.c
misc/vis/js_1/: index.html
misc/vis/lua_2/: main.lua
misc/vis/lua_3/: main.lua  sys.lua
server/: answer.js  duck_opus_decoder.js  duck_opus_decoder.wasm  eval_lua.js  log_db.js  main.js  main_save.js  packet_decode.js  run.sh.example  speech-recognition.js  sys.lua  聆小璐.pcm
vis/: main.lua
vis_js/: index.html
(+1 files in other folders)
